methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: illegal start of simple pattern
     for(<-1 to nbPas){
         ^MethodsArgs:7: error: '<-' expected but '}' found.
  }else{
  ^