methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant:Boolean){
  if (versLAvant){ 
     for(<-1 to nbPas){
    avance()
     }
  }else{
    reculer
  }
  
} 
  
  